--- a/Portfolio/02/DevFolio/assets/css/main.css
+++ b/Portfolio/02/DevFolio/assets/css/main.css
@@ -599,7 +599,7 @@ section,
   width: 100%;
   min-height: calc(100vh - 92px);
   position: relative;
-  padding: 60px 0;
+  padding: 80px 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -613,7 +613,9 @@ section,
   height: 100%;
   object-fit: cover;
   z-index: 1;
+  mix-blend-mode: normal; /* or any other blend mode like overlay, screen, etc. */
 }
+
 
 .hero:before {
   content: "";
@@ -630,6 +632,7 @@ section,
 
 .hero h2 {
   margin: 0;
+  margin-top: -300px;
   font-size: 64px;
   font-weight: 700;
 }
@@ -646,7 +649,7 @@ section,
 
 @media (max-width: 768px) {
   .hero h2 {
-    font-size: 32px;
+    font-size: 30px;
   }
 
   .hero p {
