--- a/Portfolio/01/templates/index.html
+++ b/Portfolio/01/templates/index.html
@@ -7,7 +7,7 @@
     <!-- box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="static\style.css">
 </head>
 <body>
     <!-- header design -->
@@ -41,14 +41,14 @@
             <a href="#" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="imgs/govind.png" alt="">
+            <img src="static\imgs/govind.png" alt="">
         </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="imgs/govind.png" alt=""height="px">
+            <img src="static\imgs/govind.png" alt=""height="px">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
@@ -64,55 +64,55 @@
         <h2 class="heading">My <span>TechSkills</span></h2>
         <div class="services-container">
             <div class="services-box">
-                <img src="imgs/docker.webp" alt="" height="80px">
+                <img src="static\imgs/docker.webp" alt="" height="80px">
                 <h3>Docker</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/kubernetes.svg" alt="" height="80px">
+                <img src="static\imgs/kubernetes.svg" alt="" height="80px">
                 <h3>Kubernetes</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/Jenkins.png" alt="" height="80px">
+                <img src="static\imgs/Jenkins.png" alt="" height="80px">
                 <h3>Jenkins</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/github.png" alt="" height="80px">
+                <img src="static\imgs/github.png" alt="" height="80px">
                 <h3>Github</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/githubaction.png" alt="" height="80px">
+                <img src="static\imgs/githubaction.png" alt="" height="80px">
                 <h3>Github Action</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/gitlab.png" alt="" height="80px">
+                <img src="static\imgs/gitlab.png" alt="" height="80px">
                 <h3>Gitlab</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/terraform.png" alt="" height="80px">
+                <img src="\static\imgs/terraform.png" alt="" height="80px">
                 <h3>Terraform</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/ansible.png" alt="" height="80px">
+                <img src="\static\imgs/ansible.png" alt="" height="80px">
                 <h3>Ansible</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/datadog.png" alt="" height="80px">
+                <img src="static\imgs/datadog.png" alt="" height="80px">
                 <h3>Datadog</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/linux.png" alt="" height="80px">
+                <img src="static\imgs/linux.png" alt="" height="80px">
                 <h3>Linux</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/aws.png" alt="" height="80px">
+                <img src="\static\imgs/aws.png" alt="" height="80px">
                 <h3>AWS Cloud</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/azure.png" alt="" height="80px">
+                <img src="\static\imgs/azure.png" alt="" height="80px">
                 <h3>Azure Cloud</h3>
             </div>
             <div class="services-box">
-                <img src="imgs/python.png" alt="" height="80px">
+                <img src="\static\imgs/python.png" alt="" height="80px">
                 <h3>Python</h3>
             </div>
 
@@ -125,35 +125,35 @@
         <h2 class="heading">Latest <span>Project</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="imgs/portfolioimg1.jpg" alt="">
+                <img src="\static/imgs/portfolioimg1.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Serverless Web App</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, obcaecati?</p>
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="imgs/portfolioimg2.jpg" alt="">
+                <img src="static\imgs/portfolioimg2.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Microservices Architecture Deployment</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, obcaecati?</p>
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="imgs/portfolioimg3.jpg" alt="">
+                <img src="static\imgs/portfolioimg3.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Authentication using PHP and MySQL</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, obcaecati?</p>
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="imgs/portfolioimg3.jpg" alt="">
+                <img src="static\imgs\portfolioimg3.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Content Delivery Network (CDN) Implementation</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, obcaecati?</p>
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="imgs/portfolioimg1.jpg" alt="">
+                <img src="static\imgs\portfolioimg1.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Load Balancing Strategy Development</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, obcaecati?</p>
@@ -198,7 +198,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <!-- custom js -->
-    <script src="js/script.js">
+    <script src="static\style.css">
     </script>
 </body>
 </html>
