--- a/Portfolio/01/templates/index.html
+++ b/Portfolio/01/templates/index.html
@@ -168,7 +168,9 @@
         <h2 class="heading">Contact <span>Me!</span></h2>
         <form action="#">
             <div class="input-box">
-                <input type="text" placeholder="Full Name">
+                <!-- <label for="brand">Brand:</label> -->
+                <!-- <select name="brand_name" id="fifth" required="required"> -->
+                <input type="text" placeholder="Full Name" >
                 <input type="email  " placeholder="Email Address">
             </div>
             <div class="input-box">
@@ -177,7 +179,8 @@
             </div>
             <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
             <input type="submit" value="Send Message" class="btn">
-        </form>
+        </form> 
+    </form>
     </section>
 
     <!-- footer design -->
